--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <div class="bg-primary" style="width: 100vw; height: 100vh;">
         <h1 class="secondary">color: This is the scondary color</h1>
+        <h1>Lorem, ipsum.</h1>
+        <h2>Lorem, ipsum.</h2>
+        <h3>Lorem, ipsum.</h3>
+        <h4>Lorem, ipsum.</h4>
+        <h5>Lorem, ipsum.</h5>
+        <h6>Lorem, ipsum.</h6>
     </div>
 </body>
 </html>
