--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.min.css">
     <title>SASS Course</title>
 </head>
 <body>
-    <div class="bg-primary" style="width: 100vw; height: 100vh;">
-        <h1 class="secondary">color: This is the scondary color</h1>
+    <div class="bg-dark" style="width: 100vw; height: 100vh;">
+        <h1 class="text-light">color: This is the scondary color</h1>
         <h1>Lorem, ipsum.</h1>
         <h2>Lorem, ipsum.</h2>
         <h3>Lorem, ipsum.</h3>
